# tree-sitter-gdsl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gdsl.h  tree-sitter-gdsl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gdsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGdslTests/: TreeSitterGdslTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: device_statements.txt  edge.txt  functions.txt  global.txt  literals.txt  statements.txt
