[package]
name = "tree-sitter-gdsl"
description = "Graph Dynamical System Language"
version = "0.0.1"
authors = ["Parantapa Bhattacharya <parantapa@virginia.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gdsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nssac/tree-sitter-gdsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
