[package]
name = "tree-sitter-gdsl"
description = "Graph Dynamical Systems Language"
version = "0.1.0"
authors = ["Parantapa Bhattacharya <parantapa@virginia.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gdsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nssac/tree-sitter-gdsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
